<resources>

    <string name="app_name">GoRun</string>

    <string name="golang_logo">GoLangLogo</string>
    <string name="menu_button_editor">Editor</string>
    <string name="menu_button_tutorial">Tutorial</string>
    <string name="menu_button_setting">Setting</string>
    <string name="menu_button_doc">Documentation</string>
    <string name="run_button_new">Create New</string>
    <string name="run_button_saved">From Saved</string>
    <string name="run_button_snippet">From Snippets</string>

    <string name="code_hello_world">
        package main \nimport \"fmt\" \nfunc main() { \n\tfmt.Println(\"Hello World\") \n}
    </string>

    <string name="leftBrace">(</string>
    <string name="rightBrace">)</string>
    <string name="leftCurlyBrace">{</string>
    <string name="rightCurlyBrace">}</string>
    <string name="quote">\"…\"</string>
    <string name="tab">TAB</string>
    <string name="input">">>"</string>
    <string name="settings">Settings</string>
    <string name="list">List</string>
    <string name="save">Save</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="server_state">Server State</string>

    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="run">Run</string>

    <string name="connecting_info_text">Connecting …</string>
    <string name="connected_info_text">Connected</string>
    <string name="disconnected_info_text">Disconnected</string>

    <string name="connecting_toast_message">Connecting to the server</string>
    <string name="save_text">Save current code in editor</string>
    <string name="code_title_text">Title cannot be empty</string>
    <string name="code_content_text">Code content cannot be empty</string>
    <string name="title">Title</string>
    <string name="code_save_text">Code cannot save now</string>
    <string name="loading">Loading</string>
    <string name="start">Start</string>

</resources>
